cabal-version:      2.4
name:               AdventOfCode2022
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ptkyr

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable 01
    main-is:         sol.hs
    build-depends:    base ^>=4.16.4.0
                      , megaparsec
                      , text
    hs-source-dirs:   01
    default-language: Haskell2010
    default-extensions: OverloadedStrings

executable 02
    main-is:         sol.hs
    build-depends:    base ^>=4.16.4.0
                      , megaparsec
                      , text
    hs-source-dirs:   02
    default-language: Haskell2010
    default-extensions: OverloadedStrings

executable 03
    main-is:         sol.hs
    build-depends:    base ^>=4.16.4.0
                      , megaparsec
                      , text
    hs-source-dirs:   03
    default-language: Haskell2010
    default-extensions: OverloadedStrings

executable 04
    main-is:         sol.hs
    build-depends:    base ^>=4.16.4.0
                      , megaparsec
                      , text
    hs-source-dirs:   04
    default-language: Haskell2010
    default-extensions: OverloadedStrings

executable 05
    main-is:         sol.hs
    build-depends:    base ^>=4.16.4.0
                      , megaparsec
                      , text
    hs-source-dirs:   05
    default-language: Haskell2010
    default-extensions: OverloadedStrings

executable 06
    main-is:         sol.hs
    build-depends:    base ^>=4.16.4.0
                      , megaparsec
                      , text
    hs-source-dirs:   06
    default-language: Haskell2010
    default-extensions: OverloadedStrings

executable 07
    main-is:         sol.hs
    build-depends:    base ^>=4.16.4.0
                      , megaparsec
                      , text
    hs-source-dirs:   07
    default-language: Haskell2010
    default-extensions: OverloadedStrings

executable 08
    main-is:         sol.hs
    build-depends:    base ^>=4.16.4.0
                      , megaparsec
                      , text
                      , array
    hs-source-dirs:   08
    default-language: Haskell2010
    default-extensions: OverloadedStrings

executable 09
    main-is:         sol.hs
    build-depends:    base ^>=4.16.4.0
                      , megaparsec
                      , text
    hs-source-dirs:   09
    default-language: Haskell2010
    default-extensions: OverloadedStrings

executable 10
    main-is:         sol.hs
    build-depends:    base ^>=4.16.4.0
                      , megaparsec
                      , text
    hs-source-dirs:   10
    default-language: Haskell2010
    default-extensions: OverloadedStrings

executable 11
    main-is:         sol.hs
    build-depends:    base ^>=4.16.4.0
                      , megaparsec
                      , text
                      , array
    hs-source-dirs:   11
    default-language: Haskell2010
    default-extensions: OverloadedStrings
