cabal-version:      2.4
name:               aoc2022
version:            0.1.0.0

author:             Ptkyr

common aoc
    build-depends:    base ^>=4.16.4.0
                      , aoc2022
    default-language:   Haskell2010
    default-extensions: OverloadedStrings
                      , TupleSections
    hs-source-dirs: 01, 02, 03, 04, 05
                  , 06, 07, 08, 09, 10
                  , 11
    ghc-options:       -Wall

library
    exposed-modules: Utils
    build-depends:    base ^>=4.16.4.0
                      , megaparsec
                      , text
                      , array
    hs-source-dirs:   common
    default-language: Haskell2010
    default-extensions: OverloadedStrings
                      , TupleSections

executable 01
    import: aoc
    main-is: 01.hs

executable 02
    import: aoc
    main-is: 02.hs

executable 03
    import: aoc
    main-is: 03.hs

executable 04
    import: aoc
    main-is: 04.hs

executable 05
    import: aoc
    main-is: 05.hs

executable 06
    import: aoc
    main-is: 06.hs

executable 07
    import: aoc
    main-is: 07.hs

executable 08
    import: aoc
    main-is: 08.hs

executable 09
    import: aoc
    main-is: 09.hs

executable 10
    import: aoc
    main-is: 10.hs

executable 11
    import: aoc
    main-is: 11.hs
